--- a/style.css
+++ b/style.css
@@ -551,7 +551,7 @@ a[data-lightbox]:hover::before {
     margin-left: -25px;
     border-radius: 50%;
     background: rgba(0, 0, 0, .6);
-    color: #FFF;
+    color: #0a0000;
     font-weight: 100;
     z-index: 1;
     position: absolute;
@@ -698,7 +698,7 @@ p {
 
 .cta-hero {
     margin-top: 22px;
-    color: #FFFFFF!important;
+    color: #0a0000!important;
     text-transform: uppercase;
     padding: 12px 28px 12px 28px;
     font-size: 16px;
@@ -742,7 +742,7 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: #0a0000!important;
 }
 
 .portfolio-thumb {
@@ -786,20 +786,20 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF!important;
+    color: #0a0000!important;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956!important;
-    color: #FFFFFF!important;
+    color: #0a0000!important;
 }
 
 .ltc-white {
-    color: #FFFFFF!important;
+    color: #0a0000!important;
 }
 
 .ltc-white:hover {
-    color: #cccccc!important;
+    color: #0a0000!important;
 }
 
 .ltc-atomic-tangerine {
@@ -1033,17 +1033,27 @@ h4 {
         width: 180px;
         height: 320px;
     }
+    p{
+        font-size:12px;
+    }
 }
+
 
 @media (max-width: 400px) {
     .bloc {
         padding-left: 0;
         padding-right: 0;
     }
+    p{
+        font-size: 12px;
+    }
 }
 
 @media (max-width: 767px) {
     .bloc-mob-center-text {
         text-align: center;
+    }
+    p{
+        font-size: 12px;
     }
 }
