--- a/style.css
+++ b/style.css
@@ -644,6 +644,9 @@ a[data-lightbox]:hover img {
     color: rgba(0, 0, 0, .5);
     background: none;
 }
+a{
+    padding: 48px;
+}
 
 h1,
 h2,
@@ -657,7 +660,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #000000!important;
 }
 
 .container {
