amélioration audit puces liens partenaires

--- a/style.css
+++ b/style.css
@@ -732,7 +732,9 @@ h2 {
     font-size: 22px;
     line-height: 1.4em;
 }
-
+.liens{
+    font-size: large;
+}
 h3 {
     font-size: 15px;
     text-transform: uppercase;
